<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">SwitchPool</string>
    <string name="action_settings">Settings</string>
    
    <!-- login-->
    <string name="login_username_hint">请输入手机号/用户名</string>
    <string name="login_phone_hint">请输入手机号/用户名</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_login_btn">登录</string>
    <string name="login_tab_phonelogin_btn">手机号登录</string>
    <string name="login_tab_uidlogin_btn">用户号登录</string>
    <string name="login_tab_phonelogin_selectCountry">请选择国家和地区</string>
    
    <string name="login_more">更多</string>
    <string name="login_more_list1">登录（短信方式）</string>
    <string name="login_more_list2">选择界面使用的语言（language）</string>
    <string name="login_more_list3">访问网站</string>
    
    <string name="login_register">注册新用户</string>
    <string name="login_register_title">请确认你的国家和地区，并填写手机号</string>
    <string name="login_register_rule">轻触上面的“注册”按钮，即表示你同意《软件许可及服务协议》</string>
    <string name="login_verify_title">我们已发送验证码短信到这个号码</string>
    <string name="login_verify_edittext_hit">请输入验证码</string>
    <string name="login_verify_time"><xliff:g>接收短信大约需要</xliff:g>%d<xliff:g>秒</xliff:g></string>
    <string name="login_verify_notreceive">收不到验证码？</string>
    <string name="login_verify">提交</string>
    <string name="login_verify_resend">重新获取验证码？</string>
    <string name="login_verify_fail">验证码不正确，请重新输入</string>
    <string name="login_verify_during">验证码短信可能略有延迟，确定要返回并重新开始吗？</string>
    <string name="login_verify_succeed"><xliff:g>注册成功，为您分配的用户号为</xliff:g>%s<xliff:g>，现在可以直接登录系统</xliff:g></string>
    
    <string name="Username_will_not_be_nil">用户名不能为空</string>
    <string name="Password_will_not_be_nil">密码不能为空</string>
    <string name="Login_failed">登录失败</string>
    <string name="Login_succeeded">登录成功</string>
    
    <!-- tab -->
    <string name="tabbar_item_home">资源中心</string>
    <string name="tabbar_item_news">动态</string>
    <string name="tabbar_item_setting">管理中心</string>
    <string name="tabbar_item_more">更多</string>
    
    <!-- detail_tab -->
    <string name="detail_tab_summary">摘要</string>
    <string name="detail_tab_content">内容</string>
    <string name="detail_tab_note">笔记</string>
    <string name="detail_tab_audio">音频</string>
    <string name="detail_tab_more">更多</string>
    
    <string name="detail_summary_tool_forward">下一页</string>
    <string name="detail_summary_tool_home">首页</string>
    <string name="detail_summary_tool_back">上一页</string>
    
    <string name="detail_content_tab">切换</string>
    <string name="detail_content_content1">内容一</string>
    <string name="detail_content_content2">内容二</string>
    <string name="detail_content_content3">内容三</string>
    
    <string name="detail_note_tab">切换</string>
    <string name="detail_note_edit">编辑</string>
    <string name="detail_note_complete">上传</string>
    <string name="detail_note_text_hint">请输入您的笔记</string>
    <string name="camera">拍&#160;&#160;&#160;照</string>
    <string name="record">录&#160;&#160;&#160;音</string>
    
    <string name="SPAudioFilePrefix">001</string>
    <string name="detail_note_audio_cacheProgress"><xliff:g>已缓存 </xliff:g><xliff:g>%d</xliff:g><xliff:g>%%</xliff:g></string>
    
    <!-- home -->
    <string name="hoem_nav_title">去哪儿玩</string>
    <string name="home_item_grid1">概览区</string>
    <string name="home_item_grid2">综合区</string>
    <string name="home_item_grid3">特色区</string>
    <string name="home_item_grid4">定制区</string>
    <string name="home_item_grid5">第一频道</string>
    <string name="home_item_grid6">搜一搜</string>
    <string name="home_item_grid7">听一听</string>
    <string name="home_item_grid8">第二频道</string>
    
    <string name="toplist_nav_title"><xliff:g>索引（</xliff:g>%s<xliff:g>）</xliff:g></string>
    <string name="seclist_nav_title"><xliff:g>索引（</xliff:g>%s<xliff:g> 第</xliff:g>%d<xliff:g>类）</xliff:g></string>
    <string name="detail_nav_title"><xliff:g>第</xliff:g>%s<xliff:g>类</xliff:g></string>
    
    <!-- search -->
    <string name="search_nav_title">搜索</string>
    <string name="search_field_hit">请输入您要搜索的关键字</string>
    <string name="search_nocontent_tip">暂无您所搜索的内容</string>
    <string name="search_welcome_tip">欢迎进入搜索的世界</string>
    
    <!-- utility-->
    <string name="OK">好的</string>
    <string name="loading">加载中</string>
    <string name="loadingandwait">加载中，请稍等</string>
    <string name="back">返回</string>
    <string name="cancel">取消</string>
    <string name="wait">等待</string>
    
    <string name="nocontenttip_list">本模块内容正在审核中，我们将尽快推出</string>
    <string name="nocontenttip_detail_content">本节内容正在审核中，我们将尽快推出</string>
    <string name="nocontenttip_detail_textnote">本节还没有文本笔记</string>
    <string name="nocontenttip_detail_imagenote">本节还没有图片笔记</string>
    <string name="nocontenttip_detail_audionote">本节还没有音频笔记</string>
    <string name="nocontenttip_search">暂无您所搜索的内容</string>
    <string name="nocontenttip_audioplay">目前没有内容在播放，是否进入概览区选择播放的内容？</string>
    <string name="nocontenttip_noRight">您没有访问该主题的权限，是否前往开通？</string>
    
    <!-- key-->
    <string name="host">http://115.29.146.245:8080/</string>
    <string name="SPItemList">kSPItemList</string>
    <string name="SPPoolSearchDict">kSPPoolSearchDict</string>
    <string name="SPSearchKeyList">kSPSearchKeyList</string>
    
    <string name="SPItemSelectHistoryTop">SPItemSelectHistoryTop</string>
    <string name="SPItemSelectHistorySec">SPItemSelectHistorySec</string>
    
    <string name="viewpager_indicator">%1$d/%2$d</string>
    
    <string name="SPQueryGap">SPQueryGap</string>
    <string name="SPPoolDateDict">SPPoolDateDict</string>
    <string name="SPPoolDateSearchDict">SPPoolDateSearchDict</string>
    <string name="SPPoolDateModelDict">SPPoolDateModelDict</string>
    
</resources>
