<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
   <RelativeLayout
       android:id="@+id/relativeLayout_detail_note"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_marginBottom="40dp" >

   </RelativeLayout>
    
  <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/toolbar_sec_bg"
        android:id="@+id/linerLayout_detail_note_toolbar" >
        
         <Button
            android:id="@+id/button_detail_note_tab"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@color/translucent"
            android:text="@string/detail_note_tab"
            android:textColor="@color/detail_toolbutton_color"
            android:textSize="15sp" />

         <ImageButton
             android:id="@+id/button_detail_note_action"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="2"
             android:src="@drawable/detail_note_camera"
             android:background="@color/translucent"
             android:contentDescription="@string/app_name" />   
                
          <Button
            android:id="@+id/button_detail_note_edit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@color/translucent"
            android:text="@string/detail_note_edit"
            android:textColor="@color/detail_toolbutton_color"
            android:textSize="15sp" />

    </LinearLayout>
    
</RelativeLayout>
