<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <WebView
        android:id="@+id/webView_detail_summary"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="40dp" />

    <LinearLayout
        android:id="@+id/linearLayout_detail_summary"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/toolbar_sec_bg" >

        <Button
            android:id="@+id/button_detail_summary_back"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/translucent"
            android:text="@string/detail_summary_tool_back"
            android:textColor="@color/detail_toolbutton_color_nor"
            android:textSize="15sp" />
        
         <Button
            android:id="@+id/button_detail_summary_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/translucent"
            android:text="@string/detail_summary_tool_home"
            android:textColor="@color/detail_toolbutton_color_nor"
            android:textSize="15sp" />
                
         <Button
            android:id="@+id/button_detail_summary_forward"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/translucent"
            android:text="@string/detail_summary_tool_forward"
            android:textColor="@color/detail_toolbutton_color_nor"
            android:textSize="15sp" />

    </LinearLayout>

</RelativeLayout>
